cluster/apps/hardware/scanservjs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanservjs
  labels:
    app.kubernetes.io/name: scanservjs
    app.kubernetes.io/instance: scanservjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scanservjs
      app.kubernetes.io/instance: scanservjs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scanservjs
        app.kubernetes.io/instance: scanservjs
    spec:
      containers:
        - name: scanservjs
          image: sbs20/scanservjs:release-v2.21.0
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: scans
              mountPath: /app/data/output
            - name: dbus
              mountPath: /var/run/dbus
              readOnly: false
          command: ["/bin/sh"]
          args: ["-c", "service dbus start"]
      volumes:
        - name: scans
          persistentVolumeClaim:
            claimName: scanservjs-scans
        - name: dbus
          hostPath:
            path: /var/run/dbus
            type: ""

      nodeSelector:
        kubernetes.io/arch: amd64
