cluster/apps/hardware/scanservjs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scanservjs
  namespace: hardware
spec:
  selector:
    app.kubernetes.io/name: scanservjs
    app.kubernetes.io/instance: scanservjs
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: http
