cluster/apps/hardware/scanservjs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanservjs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: networking-sso@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    hajimari.io/appName: scanner
    hajimari.io/enable: "true"
    hajimari.io/icon: scan
  labels:
    app.kubernetes.io/name: scanservjs
    app.kubernetes.io/instance: scanservjs
spec:
  ingressClassName: traefik
  rules:
    - host: "scanservjs.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanservjs
                port:
                  name: http

  tls:
    - secretName: scanservjs-cert
      hosts:
        - "scan.${SECRET_DOMAIN}"
